@@ -3,11 +3,16 @@
  *
  */
 
+.customize-control-checkbox {
+    margin-bottom: 4px;
+}
+
 #customize-control-smartline_control_excerpt_text_headline,
 #customize-control-smartline_control_post_images,
 #customize-control-smartline_control_postmeta_headline,
+#customize-control-smartline_control_post_footer_headline,
 #customize-control-smartline_control_slider_activated {
-	margin-top: 12px;
+	margin-top: 16px;
 }
 #customize-control-smartline_control_featured_posts_header,
 #customize-control-smartline_control_slider_animation {
@@ -21,6 +26,7 @@
 #customize-control-smartline_control_post_images,
 #customize-control-smartline_control_excerpt_text_headline,
 #customize-control-smartline_control_postmeta_headline,
+#customize-control-smartline_control_post_footer_headline,
 #customize-control-smartline_control_slider_activated,
 #customize-control-smartline_control_featured_posts_header  {
 	margin-bottom: 0;
